--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,9 +1,8 @@
 .draggable-container {
   position: absolute;
-  width: 50vw;
-  height: 60vh;
-  background-color: lightblue;
-  border: 1px solid #ccc;
+  width: 70vw;
+  height: 80vh;
+  background-color: #c4c4c4;
   cursor: grab;
   display: flex;
   align-items: center;
@@ -19,6 +18,7 @@
   width: 70vw;
   height: 80vh;
   border: 1px solid black;
+  background-color: #afafaf;
   overflow: hidden;
   margin: 20px 15vw;
 }
