fixed zoom directive on main instead of branch whoopsies

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,6 +3,7 @@
     <div
     class="draggable-container"
     zoomDirective
+    #zoomInstance="zoomDirective"
     (mousedown)="onDragStart($event)"
     (mousemove)="onDrag($event)"
     (mouseup)="onDragEnd()"
