make clickable zoom correctly center on location

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -10,7 +10,7 @@
     (mouseup)="onDragEnd()"
     [ngStyle]="{ top: position.y + 'px', left: position.x + 'px' }">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 800" style="position:absolute; z-index: 2; background-color:white; opacity:0.5;">
-            <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building, $event)">
+            <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building)">
                 <!-- poster objects go here, *ngFor="let poster of this.getPosters()" or something -->
             </path>
 
@@ -19,6 +19,6 @@
             <path class="building-component" d="m92 40h 8v2h4 1v5h-1v-4h-4v3h4v1h-4v2h-8z" (click)="printLocation()"/>
             <path class="building-component" d="" (click)="printLocation()"/> -->
         </svg>
-        <img src="/croppedRitMap.png" alt="map background" style="user-select: none; pointer-events: none; z-index: 1;">
+        <img class="map-background" src="/croppedRitMap.png" alt="map background" style="user-select: none; pointer-events: none; z-index: 1;">
     </div>
 </div>
