--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -12,13 +12,11 @@
 }
 
 .constraint-container {
-  position: relative;
-  width: 70vw;
-  height: 80vh;
-  border: 1px solid black;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background-color: #afafaf;
   overflow: hidden;
-  margin: 20px 15vw;
 }
 
 .building-component {
@@ -34,4 +32,21 @@
 .map-background {
   width: 1200px;
   height: 600px;
+}
+
+.main-container {
+  position: relative;
+  width: 70vw;
+  height: 80vh;
+  border: 1px solid black;
+  background-color: #afafaf;
+  overflow: hidden;
+  margin: 20px 15vw;
+}
+
+.information-container {
+  right: 0;
+  top: 0;
+  background-color: #5a5a5a;
+  height: 100%;
 }
