--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,17 +1,19 @@
-<p>map works!</p>
 <div class="main-container">
-    <div id="mapElement" class="constraint-container" preventZoom>
+    <div 
+    id="mapElement"
+    class="constraint-container"
+    preventZoom 
+    (mousedown)="onDragStart($event)"
+    (mousemove)="onDrag($event)"
+    (mouseup)="onDragEnd()">
         <div
         class="draggable-container"
         zoomDirective
         #mapElement
         #zoomInstance="zoomDirective"
-        (mousedown)="onDragStart($event)"
-        (mousemove)="onDrag($event)"
-        (mouseup)="onDragEnd()"
         [ngStyle]="{ top: position.y + 'px', left: position.x + 'px' }">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 800" style="position:absolute; z-index: 2; background-color:white; opacity:0.5;">
-                <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building)">
+                <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building,3)">
                     <!-- poster objects go here, *ngFor="let poster of this.getPosters()" or something -->
                 </path>
     
@@ -23,6 +25,9 @@
             <img class="map-background" src="/croppedRitMap.png" alt="map background" style="user-select: none; pointer-events: none; z-index: 1;">
         </div>
     </div>
-    <div class="information-container">
+    <div id="information-container" style="display: none;">
+        <button id="info-close-button" (click)="closeMenu()">Close Menu</button>
+        <h3 id="info-name">{{buildingName}}</h3>
+        <p>{{buildingDescription}}</p>
     </div>
 </div>
