--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -29,5 +29,15 @@
         <button id="info-close-button" (click)="closeMenu()">Close Menu</button>
         <h3 id="info-name">{{buildingName}}</h3>
         <p>{{buildingDescription}}</p>
+        <hr>
+        <p>Select Floor: </p>
+        <div id="info-floor-selector">
+            <!-- <button (click)="selectFloor(0)"><p>A</p></button> -->
+            <button (click)="selectFloor(1)"><p>1</p></button>
+            <button (click)="selectFloor(2)"><p>2</p></button>
+            <button (click)="selectFloor(3)"><p>3</p></button>
+            <button (click)="selectFloor(4)"><p>4</p></button>
+            <button (click)="selectFloor(5)"><p>5</p></button>
+        </div>
     </div>
 </div>
