--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -71,3 +71,13 @@
   width: 10%;
   aspect-ratio: 1/1;
 }
+
+.unselected-button {
+  border-radius: 5px;
+  background-color: #a2a2a2;
+}
+
+.selected-button {
+  border-radius: 5px;
+  background-color: #ebebeb;
+}
