--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -13,7 +13,7 @@
         #zoomInstance="zoomDirective"
         [ngStyle]="{ top: position.y + 'px', left: position.x + 'px' }">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 800" style="position:absolute; z-index: 2; background-color:white; opacity:0.5;">
-                <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building,3)">
+                <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building,5)">
                     <!-- poster objects go here, *ngFor="let poster of this.getPosters()" or something -->
                 </path>
     
@@ -27,17 +27,13 @@
     </div>
     <div id="information-container" style="display: none;">
         <button id="info-close-button" (click)="closeMenu()">Close Menu</button>
-        <h3 id="info-name">{{buildingName}}</h3>
-        <p>{{buildingDescription}}</p>
+        <h3 id="info-name">{{building.name}}</h3>
+        <p>{{building.description}}</p>
         <hr>
         <p>Select Floor: </p>
         <div id="info-floor-selector">
             <!-- <button (click)="selectFloor(0)"><p>A</p></button> -->
-            <button (click)="selectFloor(1)"><p>1</p></button>
-            <button (click)="selectFloor(2)"><p>2</p></button>
-            <button (click)="selectFloor(3)"><p>3</p></button>
-            <button (click)="selectFloor(4)"><p>4</p></button>
-            <button (click)="selectFloor(5)"><p>5</p></button>
+            <button class="unselected-button" *ngFor="let num of floorArr" (click)="selectFloor(num)">{{num}}</button>
         </div>
     </div>
 </div>
