--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -16,6 +16,9 @@
                 <path class="building-component" *ngFor="let building of this.buildingData" attr.d={{building.shape}} id={{building.name}} (click)="select(building,5)">
                     <!-- poster objects go here, *ngFor="let poster of this.getPosters()" or something -->
                 </path>
+
+                <path *ngFor="let poster of posterArr" id="poster#{{poster.id}}" attr.d="m {{poster.globalPosition.posX}},{{poster.globalPosition.posY-11.5}} a 3.8154277,4.0266488 0 0 0 -3.81608,4.02735 3.8154277,4.0266488 0 0 0 1.65195,3.30599 l 2.19126,4.33166 2.2269,-4.40145 a 3.8154277,4.0266488 0 0 0 1.54849,-3.06258 l 0.0188,-0.0358 h -0.016 a 3.8154277,4.0266488 0 0 0 0.008,-0.138 3.8154277,4.0266488 0 0 0 -3.81438,-4.02733 z" 
+                fill="#ff0000"></path>
     
                 <!-- <path class="building-component" d="m11 1h 7v3h-3v4h-4z" (click)="printLocation()"/>
                 <path class="building-component" d="m 707.01107,426.93727 h 39.8524 v 5.90406 h 12.17712 v 48.33948 h -50.92251 z" (click)="printLocation()"/>
@@ -38,7 +41,7 @@
         <hr>
         <h3 style="margin: 10px">Posters Here:</h3>
         <ul class="poster-list">
-            <li *ngFor="let poster of posterArr">Poster #{{poster}}</li>
+            <li *ngFor="let poster of posterArr">Poster #{{poster.id}}</li>
         </ul>
     </div>
 </div>
