--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -18,7 +18,7 @@
                 </path>
 
                 <path class="poster-pin" *ngFor="let poster of posterArr" id="poster#{{poster.id}}" (click)="selectPoster(poster,10)" 
-                attr.d="m {{poster.globalPosition.posX}},{{poster.globalPosition.posY}} a 3.8154277,4.0266488 0 0 0 -3.81608,4.02735 3.8154277,4.0266488 0 0 0 1.65195,3.30599 l 2.19126,4.33166 2.2269,-4.40145 a 3.8154277,4.0266488 0 0 0 1.54849,-3.06258 l 0.0188,-0.0358 h -0.016 a 3.8154277,4.0266488 0 0 0 0.008,-0.138 3.8154277,4.0266488 0 0 0 -3.81438,-4.02733 z" 
+                attr.d="m {{poster.position.posX}},{{poster.position.posY}} a 3.8154277,4.0266488 0 0 0 -3.81608,4.02735 3.8154277,4.0266488 0 0 0 1.65195,3.30599 l 2.19126,4.33166 2.2269,-4.40145 a 3.8154277,4.0266488 0 0 0 1.54849,-3.06258 l 0.0188,-0.0358 h -0.016 a 3.8154277,4.0266488 0 0 0 0.008,-0.138 3.8154277,4.0266488 0 0 0 -3.81438,-4.02733 z" 
                 ></path>
     
                 <!-- <path class="building-component" d="m11 1h 7v3h-3v4h-4z" (click)="printLocation()"/>
