--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 style="margin: 5px;">{{title}}</h1>
+<h1 style="margin: 5px; color: black;">{{title}}</h1>
 <app-map></app-map>
 <app-schedule></app-schedule>
