add fallback image when no poster image; small UI changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1 style="margin: 5px; color: black;">{{title}}</h1>
+<div style="display: flex;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 0 8 12" style="height: 2em; width: auto; margin:0.5em 5px;">
+        <path d="m 0,0 a 3.8154277,4.0266488 0 0 0 -3.81608,4.02735 3.8154277,4.0266488 0 0 0 1.65195,3.30599 l 2.19126,4.33166 2.2269,-4.40145 a 3.8154277,4.0266488 0 0 0 1.54849,-3.06258 l 0.0188,-0.0358 h -0.016 a 3.8154277,4.0266488 0 0 0 0.008,-0.138 3.8154277,4.0266488 0 0 0 -3.81438,-4.02733 z"></path>
+    </svg>
+    <h1 style="margin: 5px; color: black;">{{title}}</h1>
+</div>
 <app-map></app-map>
 <app-schedule></app-schedule>
