--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -59,9 +59,9 @@
             </ul>
         </div>
         <div id="poster-info-container" style="display: none;">
-            <h1 style="margin: 5px;">{{poster.location}}#{{poster.id}}</h1>
-            <p style="margin: 10px;">{{poster.description}}</p>
-            <img style="width: 100%; box-sizing: border-box; aspect-ratio: 4/3; background-color: rgb(136, 136, 136);" src="https://placehold.jp/400x300.png">
+            <h1>{{poster.location}}#{{poster.id}}</h1>
+            <p style="margin: 5px;">{{poster.description}}</p>
+            <img style="width: 100%; box-sizing: border-box; aspect-ratio: 4/3; background-color: rgb(136, 136, 136);" src="/notfound.png">
         </div>
     </div>
 </div>
